feat: update EN translations, add logos, layout fixes, add party

--- a/public/en.html
+++ b/public/en.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Studentenkieswijzer Gemeenteraadsverkiezingen Enschede</title>
-    <meta name="description" content="Studentenkieswijzer voor de gemeenteraadsverkiezingen van 2022 in Enschede. Samengesteld door P.K.v.V. Fact.">
+      <title>Student election guide municipal elections Enschede</title>
+      <meta name="description" content="Student election guide for the municipal elections of 2022 in Enschede. Compiled by P.K.v.V. Fact.">
   </head>
   <body>
     <noscript>
@@ -20,12 +20,12 @@
     "algorithm": "hybrid",
     "languages": [
         {
-            "name": "Nederlands",
-            "code": "nl"
-        },
-        {
             "name": "English",
             "code": "en"
+        },
+        {
+            "name": "Nederlands",
+            "code": "nl"
         }
     ],
     "title": {
