fix: missing party

--- a/public/en.html
+++ b/public/en.html
@@ -48,6 +48,22 @@
     },
     "parties": [
         {
+            "alias": "bbe",
+            "name": {
+                "nl": "Burger Belangen Enschede",
+                "en": "Burger Belangen Enschede (Citizen Interests Enschede)"
+            },
+            "short": {
+                "nl": "BBE",
+                "en": "BBE"
+            },
+            "description": {
+                "nl": "BBE is een zelfstandige en lokale politieke partij zonder enige landelijke binding die al bijna 30 jaar in de gemeente Enschede voor haar burgers politiek, sociaal en maatschappelijk actief is. BBE wil eigen initiatief en betrokkenheid van de burger stimuleren en optimaal benutten, oftewel 'Gewoon Samen Doen'.",
+                "en": "BBE is an independent and local political party without any nationwide connections that has been politically and socially active in the municipality of Enschede for almost 30 years. BBE wants to stimulate and optimally use the initiative and involvement of the citizen, in other words 'just do it together'."
+            },
+            "logo": "/parties/bbe.png"
+        },
+        {
             "alias": "cda",
             "name": {
                 "nl": "CDA",
@@ -279,10 +295,17 @@
                 "en": "General"
             },
             "statement": {
-                "nl": "Studenten zouden meer inspraak moeten hebben in the politiek van Enschede",
+                "nl": "Studenten zouden meer inspraak moeten hebben in de politiek van Enschede",
                 "en": "Students should be involved more in the politics of Enschede"
             },
             "positions": {
+                "bbe": {
+                    "position": "approve",
+                    "explanation": {
+                        "nl": "Het is van belang dat er goed geluisterd wordt naar ideeen, meningen en standpunten van studenten om Enschede zodoende verder uit te laten groeien tot een aantrekkelijke studenten stad.",
+                        "en": "It is important to listen to the ideas, opinions and views of students to enhance and grow further to an attractive student city."
+                    }
+                },
                 "cda": {
                     "position": "approve",
                     "explanation": {
@@ -393,6 +416,13 @@
                 "en": "Studying in Enschede should be promoted more within the Netherlands"
             },
             "positions": {
+                "bbe": {
+                    "position": "strongly-approve",
+                    "explanation": {
+                        "nl": "Om te groeien als stad naar 170.000+ inwoners en talent en kennis naar onze stad te halen en te behouden verdient dit thema blijvende aandacht en een gerichte voortdurende campagne.",
+                        "en": "To grow as a city to reach 170,000+ inhabitants, and to get talent and knowledge to our city, this theme should get permanent attention and a targeted constant campaign."
+                    }
+                },
                 "cda": {
                     "position": "approve",
                     "explanation": {
@@ -503,6 +533,13 @@
                 "en": "The municipality Enschede should support more student initiatives"
             },
             "positions": {
+                "bbe": {
+                    "position": "approve",
+                    "explanation": {
+                        "nl": "Enschede ondersteund al meerdere studenten initiatieven, echter alle nieuwe initiatieven die een bijdrage kunnen leveren aan de aantrekkelijkheid van Enschede als studentenstad verdienen de aandacht.",
+                        "en": "Enschede already supports several student initiatives, but all new initiatives that can contribute to the attractiveness of Enschede as a student city deserve attention."
+                    }
+                },
                 "cda": {
                     "position": "approve",
                     "explanation": {
@@ -613,6 +650,13 @@
                 "en": "The municipality Enschede should work together more with the University of Twente and the Saxion highschool"
             },
             "positions": {
+                "bbe": {
+                    "position": "strongly-approve",
+                    "explanation": {
+                        "nl": "Aan de Noord -West kant van onze stad zijn we aan het bouwen met het profiel \u201ckennis stad\u201d. Daarbij werken we al samen met de kennisinstituten maar dit moet nog verder uitgebouwd worden om het profiel te verstevigen. Ook denken wij hierbij aan zogeheten living labs.",
+                        "en": "On the North-West side of our city we are building with the profile \"knowledge city\". Here, we already work with the knowledge institutes, but this must be further expanded to strengthen the profile. Here, we are also thinking of so-called living labs."
+                    }
+                },
                 "cda": {
                     "position": "approve",
                     "explanation": {
@@ -723,6 +767,13 @@
                 "en": "Enschede should offer more possibilities for a career after finishing a study"
             },
             "positions": {
+                "bbe": {
+                    "position": "strongly-approve",
+                    "explanation": {
+                        "nl": "We moeten voortdurend investeren in het vestigingsklimaat van onze stad. Sport, cultuur en evenementen. Maar ook het stadshart met een bruisende binnenstad is van belang. Werkgelegenheid is een onderwerp waar momenteel al stevig op wordt ingezet en wat zich almaar lijkt uit te breiden.",
+                        "en": "We must constantly invest in the business climate of our city. Sports, culture and events. But a bustling city center is also important. Employment is a subject that is currently being handled firmly and this only seems to expand."
+                    }
+                },
                 "cda": {
                     "position": "strongly-approve",
                     "explanation": {
@@ -833,6 +884,13 @@
                 "en": "More international students should come to Enschede"
             },
             "positions": {
+                "bbe": {
+                    "position": "neutral",
+                    "explanation": {
+                        "nl": "Burgerbelangen Enschede gaat het niet specifiek om een doelgroep zoals in deze vraagstelling is aangegeven. Nationale en internationale studenten zijn nodig om de groei te kunnen maken.",
+                        "en": "Burgerbelangen Enschede does not specifically care about a target group as indicated in this question. National and international students are needed to realise growth."
+                    }
+                },
                 "cda": {
                     "position": "neutral",
                     "explanation": {
@@ -943,6 +1001,13 @@
                 "en": "More international events should be set up in Enschede"
             },
             "positions": {
+                "bbe": {
+                    "position": "neutral",
+                    "explanation": {
+                        "nl": "Zolang evenementen toegankelijk zijn en er oog is voor nieuwe initiatieven die komen van (internationale) studenten volstaat dit.",
+                        "en": "As long as events are accessible and there is an eye for new initiatives that come from (international) students, this is sufficient."
+                    }
+                },
                 "cda": {
                     "position": "approve",
                     "explanation": {
@@ -1053,6 +1118,13 @@
                 "en": "More should be done to make international students feel at home in Enschede"
             },
             "positions": {
+                "bbe": {
+                    "position": "strongly-approve",
+                    "explanation": {
+                        "nl": "Een goed introductie programma voor internationale studenten is van belang. Door de verschillende partijen samen georganiseerd. Gedurende de periode dat men in onze stad studeert moet er aandacht zijn voor de individuele studenten. Eenzaamheid is een toenemende factor. Hier willen we op in zetten door er campagne voor te voeren.",
+                        "en": "A good introduction program for international students is important. Organized together by the various parties. During the period that people studied in our city, attention must be paid to individual students. Loneliness is an increasing factor. We want to increase attention to this by organizing a campaign."
+                    }
+                },
                 "cda": {
                     "position": "approve",
                     "explanation": {
@@ -1163,6 +1235,13 @@
                 "en": "The municipality Enschede should take care that international students do not pay more for a room than Dutch students"
             },
             "positions": {
+                "bbe": {
+                    "position": "neutral",
+                    "explanation": {
+                        "nl": "In de basis en vanuit het gelijkheidsbeginsel zou dit zo moeten zijn. Echter zijn er veel verschillende factoren die ertoe bijdragen dat een lokale overheid hier niet altijd invloed op heeft.",
+                        "en": "This should be the case in the basis and from the principle of equality. However, there are many different factors that contribute to the fact that the local government cannot always influence this."
+                    }
+                },
                 "cda": {
                     "position": "approve",
                     "explanation": {
@@ -1273,6 +1352,13 @@
                 "en": "More space must be created for student housing in Enschede"
             },
             "positions": {
+                "bbe": {
+                    "position": "strongly-approve",
+                    "explanation": {
+                        "nl": "Nu al is er een tekort aan woonruimte voor studenten. Hier moet met snelheid gestuurd worden zodat dit probleem op korte termijn verholpen is. Verschillende vormen van aanpak zijn hierbij in te zetten. Denk hierbij aan compounds, modulaire bouw, short stay.",
+                        "en": "Already there is a shortage of living space for students. We must act with haste so that this problem is resolved in the short term. Different forms of approach can be used. Think of compounds, modular construction, short stay."
+                    }
+                },
                 "cda": {
                     "position": "strongly-approve",
                     "explanation": {
@@ -1383,6 +1469,13 @@
                 "en": "It should be made possible to rent a house or an apartment a bigger group of students in Enschede"
             },
             "positions": {
+                "bbe": {
+                    "position": "reject",
+                    "explanation": {
+                        "nl": "Zolang het spreidingsprincipe wordt gehanteerd en de veiligheidseisen volstaan zou dit moeten kunnen. De afgelopen jaren hebben we echter ook meermaals vormen van woonoverlast zien ontstaan. Dit is voor zowel omwonenden als studenten een onwenselijke situatie. Hier zijn wij kritisch op.",
+                        "en": "As long as the spread principle is applied and the safety requirements are sufficient, this should be possible. However, in recent years we have also emerged forms of housing nuisance. This is an undesirable situation for both local residents and students. We are critical here."
+                    }
+                },
                 "cda": {
                     "position": "reject",
                     "explanation": {
@@ -1493,6 +1586,13 @@
                 "en": "It should become easier for private individuals to rent out an apartment or house as rooms to students"
             },
             "positions": {
+                "bbe": {
+                    "position": "neutral",
+                    "explanation": {
+                        "nl": "Zolang het spreidingsprincipe wordt gehanteerd en de veiligheidseisen volstaan zou dit moeten kunnen. De afgelopen jaren hebben we echter ook meermaals vormen van woonoverlast zien ontstaan. Dit is voor zowel omwonenden als studenten een onwenselijke situatie. Hier zijn wij kritisch op.",
+                        "en": "As long as the spread principle is applied and the safety requirements are sufficient, this should be possible. However, in recent years we have also seen forms of housing nuisance emerge. This is an undesirable situation for both local residents and students. We are critical here."
+                    }
+                },
                 "cda": {
                     "position": "reject",
                     "explanation": {
@@ -1603,6 +1703,13 @@
                 "en": "The municipality Enschede should pay more attention to the mental wellbeing of students"
             },
             "positions": {
+                "bbe": {
+                    "position": "strongly-approve",
+                    "explanation": {
+                        "nl": "Zoals hierboven bij een andere vraag omschreven, eenzaamheid, welbevinden en welzijn zijn serieuze zaken waar een lokale overheid in beperkte mate een verantwoordelijkheid heeft. ",
+                        "en": "As described above at a different question, loneliness and well-being are serious matters that a local government has, to a limited extent, a responsibility for."
+                    }
+                },
                 "cda": {
                     "position": "approve",
                     "explanation": {
