fix: spelling error

--- a/public/en.html
+++ b/public/en.html
@@ -1074,8 +1074,8 @@
                 "pvdd": {
                     "position": "approve",
                     "explanation": {
-                        "nl": "Er is al van alles te doen voor internationale studenten.\u00a0Zo is er bijvoorbeeld de week van de internationale student. Maar de drempel om mee te doen kan nog wel wat lager worden gemaakt voor studenten. Het is wel zo dat de PVD de voorkeur geeft aan kleinschaliger evenementen boven grootschalige evenementen",
-                        "en": "There is already a lot to do for international students. For example, there is the week of the international student. But the threshold to participate can still be made lower for students. The PVD does prefer small-scale events above large-scale events"
+                        "nl": "Er is al van alles te doen voor internationale studenten.\u00a0Zo is er bijvoorbeeld de week van de internationale student. Maar de drempel om mee te doen kan nog wel wat lager worden gemaakt voor studenten. Het is wel zo dat de PvdD de voorkeur geeft aan kleinschaliger evenementen boven grootschalige evenementen",
+                        "en": "There is already a lot to do for international students. For example, there is the week of the international student. But the threshold to participate can still be made lower for students. The PvdD does prefer small-scale events above large-scale events"
                     }
                 },
                 "sp": {
