feat: add analytics

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,16 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Studentenkieswijzer Gemeenteraadsverkiezingen Enschede</title>
     <meta name="description" content="Studentenkieswijzer voor de gemeenteraadsverkiezingen van 2022 in Enschede. Samengesteld door P.K.v.V. Fact.">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZLSVDPTW3W"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-ZLSVDPTW3W');
+    </script>
   </head>
   <body>
     <noscript>
