--- a/public/en.html
+++ b/public/en.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-      <title>Student election guide municipal elections Enschede</title>
-      <meta name="description" content="Student election guide for the municipal elections of 2022 in Enschede. Compiled by P.K.v.V. Fact.">
+    <title>Student election guide municipal elections Enschede</title>
+    <meta name="description" content="Student election guide for the municipal elections of 2022 in Enschede. Compiled by P.K.v.V. Fact.">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZLSVDPTW3W"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-ZLSVDPTW3W');
+    </script>
   </head>
   <body>
     <noscript>
