--- a/public/index.html
+++ b/public/index.html
@@ -148,8 +148,8 @@
                 "en": "GL"
             },
             "description": {
-                "nl": "<a href=\"https://enschede.groenlinks.nl/\" target=\"_blank\">Zie onze website</a>",
-                "en": "<a href=\"https://enschede.groenlinks.nl/\" target=\"_blank\">See our website</a>"
+                "nl": "Hallo student! Super dat je wil stemmen! Lees vooral onze toelichting bij de vragen en website, maar eigenlijk willen we het graag hebben over onderwerpen die n\u00ed\u00e9t in deze stemwijzer staan. Over de klimaatcrisis die de meeste studenten wel kennen, maar door sommige partijen ontkend wordt. Of over uitkeringen voor als je arbeidsongeschikt of werkloos raakt. Iets wat ook een (oud-)student kan overkomen. Daar willen wij niet op bezuinigen of te strenge regels opleggen, maar anderen wel. Of over ruimte voor auto\u2019s, verkeersveiligheid en vervuiling. Wij willen die ruimte voor auto\u2019s beperken. Maar er is een bekende partij die bijvoorbeeld een nieuwe grote weg dwars over de UT wil. Zo zijn er veel belangrijke onderwerpen. Vraag het ons als je meer wil weten. We wensen je succes met je keuze deze verkiezingen en een fijne tijd tijdens (en na) je studiejaren in Enschede! <a href=\"https://enschede.groenlinks.nl/\" target=\"_blank\">https://enschede.groenlinks.nl/</a>",
+                "en": "Hello student! Great that you want to vote! Please read our explanation to the questions and the website, but we would actually like to talk about topics that are not included in this voting guide. About the climate crisis that most students are familiar with, but which some parties deny. Or about benefits if you become disabled or unemployed. Something that can also happen to a (former) student. We don't want to cut back on that or impose too strict rules, but others do. Or about space for cars, road safety and pollution. We want to limit that space for cars. But there is a well-known party that wants, for example, a new major road across the UT. So there are many important topics. Ask us if you want to know more. We wish you good luck with your choice during these elections and a good time during (and after) your study years in Enschede! <a href=\"https://enschede.groenlinks.nl/\" target=\"_blank\">https://enschede.groenlinks.nl/</a>"
             },
             "logo": "/parties/gl.png"
         },
@@ -696,10 +696,10 @@
                     }
                 },
                 "gl": {
-                    "position": null,
+                    "position": "strongly-approve",
                     "explanation": {
-                        "nl": "",
-                        "en": ""
+                        "nl": "Juist met de uitdagingen van deze tijd op het gebied van klimaat, leefbaarheid en vergroening hebben we juist nieuwe idee\u00ebn nodig die komen vanuit onze kennisinstellingen en is samenwerking belangrijk. Daarnaast moeten we studenten in Enschede een fijne tijd tijdens \u00e9n na hun studie bieden. Dus samenwerking!",
+                        "en": "With today's challenges in the field of climate, quality of life and greening, we need new ideas that come from our knowledge institutions and collaboration is important. In addition, we must offer students in Enschede a good time during and after their studies. So work together!"
                     }
                 },
                 "jtw": {
@@ -813,7 +813,7 @@
                     }
                 },
                 "gl": {
-                    "position": "approve",
+                    "position": "strongly-approve",
                     "explanation": {
                         "nl": "Hoewel de rol van de gemeente relatief beperkt is bij directe invloed op de carri\u00e8re, want het zijn de bedrijven die dit moeten faciliteren, kan de gemeente wel zijn best doen om de bedrijven hier te laten vestigen. Enschede moet juist proberen meer bedrijven op het gebied van innovatie en duurzaamheid aan zich te binden. Het zijn dit soort nieuwe bedrijven en start ups die naar het idee van GroenLinks de carri\u00e8rekansen voor de toekomst bieden.",
                         "en": "Although the role of the municipality is relatively limited in direct influence on the career, because the companies should facilitate this, the municipality can do its best to have the companies established here. Enschede should try to bind more companies in the field of innovation and sustainability. GroenLinks believes that these types of new companies and start ups offer the career opportunities for the future."
