fix: images on EN debate page

--- a/public/en/debate.html
+++ b/public/en/debate.html
@@ -18,13 +18,13 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand" href="https://pkvvfact.nl" target="_blank">
-                <img width="100" src="logo.svg" alt="P.K.v.V. Fact">
+                <img width="100" src="/logo.svg" alt="P.K.v.V. Fact">
             </a>
         </div>
     </nav>
     <div class="container mt-3">
         <h1>Student debate municipal elections Enschede</h1>
-        <img class="w-100 my-4" src="raadzaal.jpg" alt="Raadzaal Stadhuis Enschede">
+        <img class="w-100 my-4" src="/raadzaal.jpg" alt="Raadzaal Stadhuis Enschede">
         <p>
             In cooperation with DAS and Taste, Fact will organize a student debate on the <b>14th of March</b>. This debate will be in Dutch, but if you do not speak Dutch, you can still fill out the election guide linked below!
             The debate will start at <b>20:00</b> with entry starting at 19:30. It will take place in the council chamber of the town hall in Enschede. The debate will also be livestreamed.
@@ -41,13 +41,13 @@
 
         <div class="logos my-5 py-2">
             <a href="https://pkvvfact.nl" target="_blank">
-                <img class="me-3" src="logo.svg" alt="P.K.v.V. Fact" height="50">
+                <img class="me-3" src="/logo.svg" alt="P.K.v.V. Fact" height="50">
             </a>
             <a href="https://asvtaste.nl" target="_blank">
-                <img class="me-3" src="taste.png" alt="A.S.V. Taste" height="50">
+                <img class="me-3" src="/taste.png" alt="A.S.V. Taste" height="50">
             </a>
             <a href="https://pvdas.nl" target="_blank">
-                <img src="das.png" alt="DAS - De Ambitieuze Student" height="50">
+                <img src="/das.png" alt="DAS - De Ambitieuze Student" height="50">
             </a>
         </div>
     </div>
