--- a/public/en/debate.html
+++ b/public/en/debate.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Student debate municipal elections Enschede</title>
     <meta name="description" content="In cooperation with DAS and Taste, Fact will organize a student debate on the 14th of March.">
