--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Studentenkieswijzer Gemeenteraadsverkiezingen Enschede</title>
     <meta name="description" content="Studentenkieswijzer voor de gemeenteraadsverkiezingen van 2022 in Enschede. Samengesteld door P.K.v.V. Fact.">
