feat: content improvements

--- a/public/debat.html
+++ b/public/debat.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <script>if (document.URL.substring(0,5) === "http:") window.location.replace('https:' + document.URL.substring(5));</script>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Studentendebat Gemeenteraadsverkiezingen Enschede</title>
     <meta name="description" content="In samenwerking met DAS en Taste organiseert Fact op 14 maart een studentendebat.">
