--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <script>if (document.URL.substring(0,5) === "http:") window.location.replace('https:' + document.URL.substring(5));</script>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Studentenkieswijzer Gemeenteraadsverkiezingen Enschede</title>
     <meta name="description" content="Studentenkieswijzer voor de gemeenteraadsverkiezingen van 2022 in Enschede. Samengesteld door P.K.v.V. Fact.">
@@ -53,8 +54,8 @@
             "en": "Welcome to the student election guide"
         },
         "text": {
-            "nl": "Deze kieswijzer is speciaal gericht op studenten en bevat stellingen die specifiek voor studenten relevant zijn. Wij raden sterk aan om ook de toelichtingen van partijen bij de stellingen te lezen en om naast deze kieswijzer ook een algemene kieswijzer in te vullen en partijprogramma's door te lezen.",
-            "en": "This election guide is aimed at students and contains theses that are specifically relevant to students. We strongly recommend that you also read the explanations of the parties to the theses and that, in addition to this election guide, you also complete a general election guide and read through party programmes."
+            "nl": "Deze kieswijzer is speciaal gericht op studenten en bevat stellingen die specifiek voor studenten relevant zijn. Wij raden sterk aan om ook de toelichtingen van partijen bij de stellingen te lezen en de partijprogramma's door te lezen. Ook kan je deelnemen aan het debat dat op 14 maart georganiseerd wordt. Meer informatie hierover vind je <a href=\"/debat\" target=\"_blank\">hier</a>.",
+            "en": "This election guide is aimed at students and contains theses that are specifically relevant to students. We strongly recommend that you also read the explanations of the parties to the theses and that, in addition to this election guide, you also read through party programmes (you can use Google Translate to translate them to English). If you speak Dutch, you can also take part in the debate that will be organized on the 14th of March. More information about this can be found <a href=\"/debat\" target=\"_blank\"></a>."
         }
     },
     "parties": [
