--- a/public/en/debate.html
+++ b/public/en/debate.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html lang="nl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <script>if (document.URL.substring(0,5) === "http:") window.location.replace('https:' + document.URL.substring(5));</script>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Student debate municipal elections Enschede</title>
     <meta name="description" content="In cooperation with DAS and Taste, Fact will organize a student debate on the 14th of March.">
