feat: update debate page

--- a/public/debat.html
+++ b/public/debat.html
@@ -25,15 +25,15 @@
         <h1>Studentendebat Gemeenteraadsverkiezingen Enschede</h1>
         <img class="w-100 my-4" src="raadzaal.jpg" alt="Raadzaal Stadhuis Enschede">
         <p>
-            In samenwerking met DAS en Taste organiseert Fact op <b>14 maart</b> een studentendebat. Het debat zal beginnen om <b>20:00</b> met een inloop vanaf 19:30 en zal plaatsvinden in de raadzaal van het stadhuis in Enschede. Het debat zal ook online te volgen zijn.
-            Bij het debat zullen zes partijen aanwezig zijn: Burger Belangen Enschede, CDA, D66, Volt en VVD. Deze partijen zal een aantal stellingen voorgelegd worden tijdens het debat, die zowel specifiek betrekking hebben op studenten,
-            als ook algemeen met Enschede te maken hebben. Ook zal er ruimte zijn om vragen te stellen aan de aanwezige partijen.
+            In samenwerking met DAS en Taste heeft Fact op <b>14 maart</b> een studentendebat georganiseerd in de raadzaal van het stadhuis in Enschede. Het debat is ook opgenomen.
+            Bij het debat waren zes partijen aanwezig: Burger Belangen Enschede, CDA, D66, Volt en VVD. Deze partijen is een aantal stellingen voorgelegd, die zowel specifiek betrekking hebben op studenten,
+            als ook algemeen met Enschede te maken hebben.
         </p>
         <p>
-            Hieronder kan je je inschrijven voor het debat. Wil je alvast weten wat partijen kunnen betekenen voor jou als student? Vul dan ook de kieswijzer in.
+            Hieronder kan je het debat terugkijken. Wil je ook weten wat andere partijen kunnen betekenen voor jou als student? Vul dan ook de kieswijzer in.
         </p>
         <div class="buttons mt-4">
-            <a href="https://forms.gle/oZP8KksMsfXBg9Lv5" target="_blank" class="btn btn-dark me-2">Schrijf je in!</a>
+            <a href="https://channel.royalcast.com/enschede/#!/enschede/20220314_1" target="_blank" class="btn btn-dark me-2">Kijk de livestream terug!</a>
             <a href="https://factkieswijzer.nl" target="_blank" class="btn btn-dark">Vul de kieswijzer in!</a>
         </div>
 
