--- a/public/en/debate.html
+++ b/public/en/debate.html
@@ -28,16 +28,14 @@
         <h1>Student debate municipal elections Enschede</h1>
         <img class="w-100 my-4" src="/raadzaal.jpg" alt="Raadzaal Stadhuis Enschede">
         <p>
-            In cooperation with DAS and Taste, Fact will organize a student debate on the <b>14th of March</b>. This debate will be in Dutch, but if you do not speak Dutch, you can still fill out the election guide linked below!
-            The debate will start at <b>20:00</b> with entry starting at 19:30. It will take place in the council chamber of the town hall in Enschede. The debate will also be livestreamed.
-            At this debate, six parties will be present: Burger Belangen Enschede, CDA, D66, Volt en VVD. These parties will be given a number of theses during the debate, that either have a connection to students, or are about the municipality of Enschede in general.
-            Furthermore, there will also be room for questions to the parties.
+            In cooperation with DAS and Taste, Fact has organized a student debate on the <b>14th of March</b> in the council chamber of the town hall in Enschede. The debate has also been recorded.
+            At this debate, six parties were present: Burger Belangen Enschede, CDA, D66, Volt en VVD. These parties have been given a number of theses during the debate, that either have a connection to students, or are about the municipality of Enschede in general.
         </p>
         <p>
-            Using the button below, you can sign up for the debate. Do you already want to know what parties can do for you as a student? Then fill out the election guide.
+            Using the button below, you can watch the recording of the debate. Do you also want to know what other parties can do for you as a student? Then fill out the election guide.
         </p>
         <div class="buttons mt-4">
-            <a href="https://forms.gle/oZP8KksMsfXBg9Lv5" target="_blank" class="btn btn-dark me-2">Sign up!</a>
+            <a href="https://channel.royalcast.com/enschede/#!/enschede/20220314_1" target="_blank" class="btn btn-dark me-2">Rewind the livestream!</a>
             <a href="https://factkieswijzer.nl/en" target="_blank" class="btn btn-dark">Fill out the election guide!</a>
         </div>
 
